# multiverse-tester

./: .gitignore  2Doptimizator.py  3Doptimizator.py  4Doptimizator.py  5Doptimizator.py  6D_optimizator.py  7D_optimizator.py  LICENSE  MANIFEST.in  README.md  main.py  optimizator.py  plateau.py  plato.py  pyproject.toml  requirements.txt  run_all_optimizers.py  streamlit_demo.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
multiverse_tester/: __init__.py  cli.py  core.py  demo_cli.py  run_all_optimizers.py  streamlit_demo.py
multiverse_tester/optimizers/: __init__.py  optimizer_10d.py  optimizer_3d.py  optimizer_5d.py  optimizer_6d.py  optimizer_7d.py  optimizer_8d.py  optimizer_9d.py  optimizer_base.py
reports/: 10D_CRITICAL_ANALYSIS.md  FULL_ANALYSIS_2D_TO_7D.md  FULL_ANALYSIS_2D_TO_8D.md  MATHEMATICAL_FORMALIZATION.md  OPTIMIZATION_REPORT.md  alpha_data_20260220_203629.csv  analysis_20260220_203629.json  report_20260220_203629.txt
tests/: __init__ 2.py  __init__.py  test_analyzer.py  test_core 2.py  test_core.py  test_optimizers.py  test_package.py  test_stellar.py
