[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse-tester"
version = "0.1.0"
description = "Симуляция пригодности вселенных для жизни при различных фундаментальных константах"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Timur Isanov", email = "tisanov@yahoo.com"}
]
keywords = ["physics", "multiverse", "simulation", "habitability", "fine-structure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
full = [
    "scikit-image>=0.19.0",
]
demo = [
    "streamlit>=1.28.0",
]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/timurisanov/multiverse-tester"
Repository = "https://github.com/timurisanov/multiverse-tester"
Documentation = "https://github.com/timurisanov/multiverse-tester#readme"
"Live Demo" = "https://multiverse-tester.streamlit.app"

[project.scripts]
multiverse-analyze = "multiverse_tester.cli:main"
multiverse-run-optimizers = "multiverse_tester.run_all_optimizers:main"
multiverse-demo = "multiverse_tester.demo_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["multiverse_tester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
